feat: improve appointment handling with enhanced worker message checks and UI updates